# route53-dyndns

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  build.sh  docker-compose.yml  pyproject.toml  r53dyndns.py  requirements.txt  run.sh
.github/workflows/: build-and-push.yml
tests/: conftest.py  test_r53dyndns.py
