[project]
name = "route53-dyndns"
version = "5.0.0"
description = "Dynamic DNS updater for Amazon Route53"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.6",
    "dnspython>=2.8.0",
]

[dependency-groups]
dev = [
    "moto>=5.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # pylint
]
